--- a/activities.tex
+++ b/activities.tex
@@ -1,8 +1,9 @@
-\section{\texorpdfstring{\faGroup\ Professional Societies \& Activities}{Professional Societies \& Activities}}
+\section{\texorpdfstring{\faGroup\ Academic Service \& Affiliations}{Academic Service \& Affiliations}}
 \mycvitemac{from 2019}{International Initiative on Spatial Lifecourse Epidemiology (ISLE)}{Member}
 \mycvitemac{from 2019}{GeoDa Center, rgeoda, libgeoda Github Organizations}{Member}
 \mycvitemac{from 2015}{The Organizations "Sustainable Cities \& Mobility"}{Volunteer}
 \mycvitemac{from 2018}{Aliyunqi Community}{Expert}
-\mycvitemac{from 2017}{International Association of Landscape Ecology of China(IALE-China)}{Member}
+\mycvitemac{2017-2019}{International Association of Landscape Ecology of China(IALE-China)}{Member}
 \mycvitemac{2016-2017}{Green Bike-Transit}{Volunteer}
 \mycvitemacl{2013-2017}{The Geographical Tribune of Youth}{Founder, Editor in Chief, Associate Editor, Assistant Editor in Chief}
+\mycvitemacl{from 2019}{Data in Brief, The Journal of Open Source Software}{Reviewer}
