--- a/cnlatex/activities.tex
+++ b/cnlatex/activities.tex
@@ -1,8 +1,9 @@
-\section{\texorpdfstring{\faGroup\ 社会兼职  \& 学术活动}{社会兼职  \& 学术活动}}
+\section{\texorpdfstring{\faGroup\ 学术职务  \& 机构}{学术职务  \& 机构}}
 \mycvitemac{自2019}{空间生命历程流行病学研究中心}{\songti{成员}}
 \mycvitemac{自2019}{GeoDa Center, rgeoda, libgeoda Github项目组}{\songti{成员}}
 \mycvitemac{自2015}{微信公众号'一览众山小 可持续城市与交通'}{\songti{志愿者}}
 \mycvitemac{自2018}{阿里云栖社区}{\songti{认证专家}}
-\mycvitemac{自2017}{国际景观生态学会中国分会(IALE-China)}{\songti{会员}}
+\mycvitemac{2017-2019}{国际景观生态学会中国分会(IALE-China)}{\songti{会员}}
 \mycvitemac{2016-2017}{拜客绿色出行}{\songti{志愿者}}
 \mycvitemac{2013-2017}{青年地理学刊}{\songti{创刊人,主编,副主编,主编助理}}
+\mycvitemacl{自2019}{Data in Brief, The Journal of Open Source Software}{\songti{审稿人}}
