--- a/cnlatex/awards.tex
+++ b/cnlatex/awards.tex
@@ -1,13 +1,13 @@
 \section{\texorpdfstring{\faTrophy\ 奖励 \& 荣誉}{奖励 \& 荣誉}}
 \mycvitemPP{2019.06}{2019年国家公派留学奖学金（CSC）}{中国}
 \mycvitemPP{2019.06}{永清环保奖学金二等奖学金}{中国}
-\mycvitemPP{2019.06}{中国科学院城市环境研究所一等奖学金[\textit{全所第3}]}{中国,厦门}
+\mycvitemPP{2019.06}{中国科学院城市环境研究所一等奖学金}{中国,厦门}
 \mycvitemPP{2019.01}{中国生态学学会优秀研究生科研创新作品}{中国}
 \mycvitemPP{2018.11}{2018年硕士国家奖学金[\textit{top 2-3\%}]}{中国}
 \mycvitemPPl{2018.10}{中国城市科学研究会城市大数据专业委员会第二届大数据支持空间规划与设计竞赛全国三等奖}{中国}
 \mycvitemPP{2018.07}{'Applied Energy'2018年暑期学校结业证书}{中国,北京}
 \mycvitemPP{2018.06}{2017-2018学年中国科学院大学三好学生}{中国,北京}
-\mycvitemPP{2018.06}{中国科学院城市环境研究所二等奖学金[\textit{全所第9}]}{中国,厦门}
+\mycvitemPP{2018.06}{中国科学院城市环境研究所二等奖学金}{中国,厦门}
 \mycvitemPP{2018.06}{中国科学院城市环境研究所一等学业奖学金}{中国,厦门}
 \mycvitemPP{2018.03}{第五届“共享杯”大学生科技资源共享服务创新大赛全国优秀奖}{中国}
 \mycvitemPP{2017.10}{易智瑞(中国)信息技术有限公司第十五届用户大会'优秀志愿者'}{中国}
