--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -16,12 +16,12 @@
 \item
     \Shaoqing, SD. Zuo, Y. Ren. (2020).
     A spatial database of CO$_2$ emissions, urban form fragmentation and city-scale effect related impact factors for the low carbon urban system in Jinjiang city, China.
-    \textit{Data in Brief}. \textit{Accepted}.
+    \textit{Data in Brief}. \textit{29}, 105274.
     \DOI{10.1016/j.dib.2020.105274}. [CiteScore = 0.93]
 \item
     SD. Zuo, \Shaoqing, Y. Ren. (2020).
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales.
-    \textit{Journal of Cleaner Production}. \textit{244}.
+    \textit{Journal of Cleaner Production}. \textit{244}, 118659.
     \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF = 6.395]
 \item
     窦攀烽, 左舒翟, 任引, {\heiti{戴劭勍}}, 云国梁. (2019).
@@ -92,37 +92,6 @@
 %\end{etaremune}
 \end{enumerate}
 
-%\subsection*{Papers submitted/under revision}
-\subsection*{\texorpdfstring{\faBook\ 投稿/返修论文}{投稿/返修论文}}
-\begin{enumerate}
-%\begin{etaremune}
-\item
-    \Shaoqing, SD. Zuo, Y. Ren.
-    A framework for uncertainty propagation in gridded maps of CO$_2$ emissions: a case study of Jinjiang city, China.  
-   \textit{Scientific Reports}.
-    (\Review).
-\item
-    \Shaoqing\CF, XM. Zheng, L. Gao, SD. Zuo, Q. Chen, XH Wei, Y. Ren.
-    Improving prediction of forest aboveground biomass maps: A combined approach of machine learning with spatial statistical model.
-    \textit{Biogeosciences}. 
-    (\Review).
-\item
-    PF. Dou, SD.Zuo, Y. Ren, M.J. Rodriguez, \Shaoqing.
-    Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
-    \textit{Journal of Hydrology}.
-    (\Review).
-\item
-    XF. Pan, H. Li, XR. Yang, JQ. Su, \Shaoqing, CX. Li, GJ. Cai, GF. Zhu.
-    Spatio-temporal distribution of syntrophs in paddy soils from Southern China.
-    \textit{Geoderma}.
-    (\Review).
-\item
-    SY. Xie, CX. Li, J. Li, G. Wang, \Shaoqing, Y. Wang, GW. Yu.
-    Treatment of industrial sludge via co-pyrolysis with rice straw for biochar improvement and heavy metals immobilization.
-    \textit{Journal of Cleaner Production}. 
-    (\Review).
-%\end{etaremune}
-\end{enumerate}
 \subsection*{\texorpdfstring{\faBook\ 专利}{专利}}
 %\begin{etaremune}
 \begin{enumerate}
@@ -151,7 +120,7 @@
 \begin{enumerate}
 \item
     JJ. Li, YP. Liu, \Shaoqing, KY. Xiang, HX. Jiang, WQ. Chen. (2019).
-    The night light uncovers city’s weight—A case study on estimating construction materials in Fuzhou, China.
+    The night light uncovers city's weight—A case study on estimating construction materials in Fuzhou, China.
     \textit{10th International Conference on Industrial Ecology, abstract 320}
 \item
     {\heiti{戴劭勍}}. (2018).
@@ -199,6 +168,44 @@
 \begin{enumerate}
 \item
    \Shaoqing, SD. Zuo, Y.Ren. (2019).
-    GISerDaiShaoqing/Urban-Carbon-Dioxide-sources-gridded-maps-and-its-detemination-in-Jinjiang-city 0.3 (Version 0.3) .
-    [Data set]. Zenodo. http://doi.org/10.5281/zenodo.3566072.
+    GISerDaiShaoqing/Urban-Carbon-Dioxide-sources-gridded-maps-and-its-detemination-in-Jinjiang-city 0.4 (Version 0.4) .
+    \textit{[Data set]}. Zenodo. 
+    \DOI{10.5281/zenodo.3566072}.
+\end{enumerate}
+
+%\subsection*{Papers submitted/under revision}
+\subsection*{\texorpdfstring{\faBook\ 投稿/返修论文}{投稿/返修论文}}
+\begin{enumerate}
+%\begin{etaremune}
+\item
+    \Shaoqing, SD. Zuo, Y. Ren.
+    A framework for uncertainty propagation in gridded maps of CO$_2$ emissions: a case study of Jinjiang city, China.  
+    \textit{Remote Sensing}. 
+    (\Submitted).
+\item
+    \Shaoqing\CF, XM. Zheng, L. Gao, CD. Xu, SD. Zuo, Q. Chen, XH. Wei, Y. Ren.
+    Improving maps of forest aboveground biomass: A combined approach using machine learning with a spatial statistical model.
+    \textit{Biogeosciences}. 
+    (\Review).
+\item
+    XM. Zheng, \Shaoqing, Q. Chen, CD. Xu, XH. Wei, MZ. Zhuang, Y. Ren.
+    Source Analysis of Uncertainty in Estimates of Forest Above-ground Biomass by Integrating Spatial Statistics, Machine Learning, Forest inventory Data, and Airborne LiDAR Data.
+    \textit{Remote Sensing of Environment}. 
+    (\Submitted).
+\item
+    PF. Dou, SD.Zuo, Y. Ren, M.J. Rodriguez, \Shaoqing.
+    Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
+    \textit{Journal of Hydrology}.
+    (\Review).
+\item
+    XF. Pan, H. Li, XR. Yang, JQ. Su, \Shaoqing, CX. Li, GJ. Cai, GF. Zhu.
+    Spatio-temporal distribution of syntrophs in paddy soils from Southern China.
+    \textit{Geoderma}.
+    (\Review).
+\item
+    SY. Xie, CX. Li, J. Li, G. Wang, \Shaoqing, Y. Wang, GW. Yu.
+    Treatment of industrial sludge via co-pyrolysis with rice straw for biochar improvement and heavy metals immobilization.
+    \textit{Journal of Cleaner Production}. 
+    (\Review).
+%\end{etaremune}
 \end{enumerate}
