--- a/cv.tex
+++ b/cv.tex
@@ -75,7 +75,7 @@
 	% Website
 	\faGlobe\ \myurl{http://gisersqdai.top/mycv/}\\
      	% Address
-     \faMap\ {Hengelosestraat 99, 7514AE  Enschede,the Netherlands}\\
+     \faMap\ {Hengelosestraat 99, 7514AE,  Enschede,the Netherlands}\\
      %Affiliation
      \faBuilding\ {Deparment of Earth Obesrvation Science, ITC, UT} 
 }
