--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -193,19 +193,24 @@
     \textit{Remote Sensing of Environment}. 
     (\Submitted).
 \item
+    SJ. Yang, \Shaoqing, YL Huang, P. Jia.
+    Commentary: Substantial undocumented infection facilitates the rapid dissemination of novel coronavirus (SARS-CoV2).
+    \textit{Frontiers in Public Health}. 
+    (\Review).
+\item
     PF. Dou, SD.Zuo, Y. Ren, M.J. Rodriguez, \Shaoqing.
     Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
     \textit{Journal of Hydrology}.
-    (\Review).
+    (\Revision).
 \item
     XF. Pan, H. Li, XR. Yang, JQ. Su, \Shaoqing, CX. Li, GJ. Cai, GF. Zhu.
     Spatio-temporal distribution of syntrophs in paddy soils from Southern China.
     \textit{Geoderma}.
-    (\Review).
+    (\Revision).
 \item
     SY. Xie, CX. Li, J. Li, G. Wang, \Shaoqing, Y. Wang, GW. Yu.
     Treatment of industrial sludge via co-pyrolysis with rice straw for biochar improvement and heavy metals immobilization.
-    \textit{Journal of Cleaner Production}. 
+    \textit{Journal of Analytical and Applied Pyrolysis}. 
     (\Review).
 %\end{etaremune}
 \end{enumerate}
