--- a/software.tex
+++ b/software.tex
@@ -3,4 +3,4 @@
 \mycvitemcomment{from 2018}{Geographical detector in R}{(The geographical detector software based on R)}
 \mycvitemcomment{from 2018}{GitHub Paper Notebook}{(The software for notebook of papers)}
 \mycvitemcomment{from 2019}{rgeoda}{rgeoda is a R package for spatial data analysis based on libgeoda and GeoDa(contributor).}
-
+\mycvitemcomment{from 2020}{COVID-19 Dashboard shiny app}{(A developed dashboard shiny app about COVID-19. \myurl{https://gisersqdai.shinyapps.io/COVID19VIS/})}
