--- a/cnlatex/software.tex
+++ b/cnlatex/software.tex
@@ -3,3 +3,4 @@
 \mycvitemcomment{自2018}{地理探测器R语言版}{(基于R开发的地理探测器)}
 \mycvitemcomment{自2018}{GitHub论文笔记}{(用于论文笔记的软件)}
 \mycvitemcomment{自2019}{rgeoda}{rgeoda是一个基于libgeoda和GeoDa的空间数据分析R包(开源贡献者)}
+\mycvitemcomment{自2020}{COVID-19仪表盘shiny应用}{(基于R shiny开发的COVID-19疫情仪表盘应用. \myurl{https://gisersqdai.shinyapps.io/COVID19VIS/})}
