--- a/publications.tex
+++ b/publications.tex
@@ -13,6 +13,11 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
+    XF. Pan, L. Zhao, JY. Luo, YH. Li, L.Zhang, T. Wu, M. Smith, \Shaoqing, P. Jia. (2020).
+    Access to bike lanes and childhood obesity: A systematic review and meta‐analysis.
+    \textit{Obesity Reviews}. 1-11.
+    \DOI{10.1111/obr.13042}. [SCI, IF = 8.192]
+\item
     \Shaoqing, SD. Zuo, Y. Ren. (2020).
     A spatial database of CO$_2$ emissions, urban form fragmentation and city-scale effect related impact factors for the low carbon urban system in Jinjiang city, China.
     \textit{Data in Brief}. \textit{29}, 105274.
@@ -96,7 +101,7 @@
 \begin{enumerate}
 \item
      Y. Ren, \Shaoqing, SD. Zuo, XM. Zheng.
-     A forest inventory biomass estimation model by multi-sources data fusion .
+     A forest inventory biomass estimation model by multi-sources data fusion.
      (\Review)
 \item
      Q. Chen, Y. Ren, XM. Zheng, SD. Zuo. \Shaoqing.
@@ -185,7 +190,7 @@
     \Shaoqing\CF, XM. Zheng, L. Gao, CD. Xu, SD. Zuo, Q. Chen, XH. Wei, Y. Ren.
     Improving maps of forest aboveground biomass: A combined approach using machine learning with a spatial statistical model.
     \textit{Biogeosciences}. 
-    (\Review).
+    (\Revision).
 \item
     XM. Zheng, \Shaoqing, Q. Chen, CD. Xu, XH. Wei, MZ. Zhuang, Y. Ren.
     Source Analysis of Uncertainty in Estimates of Forest Above-ground Biomass by Integrating Spatial Statistics, Machine Learning, Forest inventory Data, and Airborne LiDAR Data.
@@ -205,11 +210,11 @@
     XF. Pan, H. Li, XR. Yang, JQ. Su, \Shaoqing, CX. Li, GJ. Cai, GF. Zhu.
     Spatio-temporal distribution of syntrophs in paddy soils from Southern China.
     \textit{Geoderma}.
-    (\Revision).
+    (\Submitted).
 \item
     SY. Xie, CX. Li, J. Li, G. Wang, \Shaoqing, Y. Wang, GW. Yu.
     Treatment of industrial sludge via co-pyrolysis with rice straw for biochar improvement and heavy metals immobilization.
     \textit{Journal of Analytical and Applied Pyrolysis}. 
-    (\Review).
+    (\Revision).
 %\end{etaremune}
 \end{enumerate}
