--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -183,7 +183,7 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    \Shaoqing, SD. Zuo, Y. Ren.
+    \Shaoqing, SD. Zuo, CY. Lai, ZW. Yu, JJ. Li, SY. Xie, BC. Chen, Y. Ren.
     A framework for uncertainty propagation in gridded maps of CO$_2$ emissions: a case study of Jinjiang city, China.  
     \textit{Remote Sensing}. 
     (\Submitted).
