--- a/activities.tex
+++ b/activities.tex
@@ -1,6 +1,6 @@
 \section{\texorpdfstring{\faGroup\ Academic Service \& Affiliations}{Academic Service \& Affiliations}}
-\mycvitemac{from 2019}{International Initiative on Spatial Lifecourse Epidemiology (ISLE)}{Member}
-\mycvitemac{from 2019}{GeoDa Center, rgeoda, libgeoda Github Organizations}{Member}
+\mycvitemac{from 2019}{International Initiative on Spatial Lifecourse Epidemiology (ISLE)}{Fellow}
+\mycvitemac{from 2019}{GeoDa Center, rgeoda, libgeoda Github Organizations}{Contributor}
 \mycvitemac{from 2015}{The Organizations "Sustainable Cities \& Mobility"}{Volunteer}
 \mycvitemac{from 2018}{Aliyunqi Community}{Expert}
 \mycvitemac{2017-2019}{International Association of Landscape Ecology of China(IALE-China)}{Member}
