--- a/cnlatex/activities.tex
+++ b/cnlatex/activities.tex
@@ -1,6 +1,6 @@
 \section{\texorpdfstring{\faGroup\ 学术职务  \& 机构}{学术职务  \& 机构}}
 \mycvitemac{自2019}{空间生命历程流行病学研究中心}{\songti{成员}}
-\mycvitemac{自2019}{GeoDa Center, rgeoda, libgeoda Github项目组}{\songti{成员}}
+\mycvitemac{自2019}{GeoDa Center, rgeoda, libgeoda Github项目组}{\songti{贡献者}}
 \mycvitemac{自2015}{微信公众号'一览众山小 可持续城市与交通'}{\songti{志愿者}}
 \mycvitemac{自2018}{阿里云栖社区}{\songti{认证专家}}
 \mycvitemac{2017-2019}{国际景观生态学会中国分会(IALE-China)}{\songti{会员}}
