--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -185,8 +185,8 @@
 \item
     \Shaoqing, SD. Zuo, CY. Lai, ZW. Yu, JJ. Li, SY. Xie, BC. Chen, Y. Ren.
     A framework for uncertainty propagation in gridded maps of CO$_2$ emissions: a case study of Jinjiang city, China.  
-    \textit{Remote Sensing}. 
-    (\Submitted).
+   \textit{Remote Sensing}.
+    (\Review).
 \item
     \Shaoqing\CF, XM. Zheng, L. Gao, CD. Xu, SD. Zuo, Q. Chen, XH. Wei, Y. Ren.
     Improving maps of forest aboveground biomass: A combined approach using machine learning with a spatial statistical model.
@@ -208,9 +208,9 @@
     \textit{Journal of Hydrology}.
     (\Revision).
 \item
-    XF. Pan, H. Li, XR. Yang, JQ. Su, \Shaoqing, CX. Li, GJ. Cai, GF. Zhu.
-    Spatio-temporal distribution of syntrophs in paddy soils from Southern China.
-    \textit{Geoderma}.
+    XF. Pan, H. Li, LX. Zhao, XR. Yang, JQ. Su, \Shaoqing, CX. Li, GJ. Cai, GF. Zhu.
+    Response of syntrophic bacterial and methanogenic archaeal communities in paddy soil to soil type and phenological stage of rice growth.
+    \textit{Journal of Cleaner Production}.
     (\Submitted).
 \item
     SY. Xie, CX. Li, J. Li, G. Wang, \Shaoqing, Y. Wang, GW. Yu.
