--- a/publications.tex
+++ b/publications.tex
@@ -73,7 +73,7 @@
     \textit{Chinese Journal of Population Resources and Environment}. \textit{16}(1), 1-11.
     \DOI{10.1080/10042857.2017.1418273}. [ESCI]
 \item
-    ML. Li, \Shaoqing, JY. Wang, ZJ. Shen. (2016).
+    MY. Li, \Shaoqing, JY. Wang, ZJ. Shen. (2016).
 	The Analysis of Urban Spatial Development Pattern in Beijing Based on the Big Data of Government.
     \textit{Geomatics World}. \textit{23}(3), 20-26.
     \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [in Chinese]
@@ -104,7 +104,7 @@
      A forest inventory biomass estimation model by multi-sources data fusion.
      (\Review)
 \item
-     Q. Chen, Y. Ren, XM. Zheng, SD. Zuo. \Shaoqing.
+     Q. Chen, Y. Ren, XM. Zheng, SD. Zuo, \Shaoqing.
      A mixed-effect model for estimation of large area subtropical forest biomass.
      (\Review).
 %\end{etaremune}
@@ -185,7 +185,7 @@
     \Shaoqing, SD. Zuo, CY. Lai, ZW. Yu, JJ. Li, SY. Xie, BC. Chen, Y. Ren.
     A framework for uncertainty propagation in gridded maps of CO$_2$ emissions: a case study of Jinjiang city, China.  
    \textit{Remote Sensing}.
-    (\Submitted).
+    (\Review).
 \item
     \Shaoqing\CF, XM. Zheng, L. Gao, CD. Xu, SD. Zuo, Q. Chen, XH. Wei, Y. Ren.
     Improving maps of forest aboveground biomass: A combined approach using machine learning with a spatial statistical model.
@@ -207,9 +207,9 @@
     \textit{Journal of Hydrology}.
     (\Revision).
 \item
-    XF. Pan, H. Li, XR. Yang, JQ. Su, \Shaoqing, CX. Li, GJ. Cai, GF. Zhu.
-    Spatio-temporal distribution of syntrophs in paddy soils from Southern China.
-    \textit{Geoderma}.
+    XF. Pan, H. Li, LX. Zhao, XR. Yang, JQ. Su, \Shaoqing, CX. Li, GJ. Cai, GF. Zhu.
+    Response of syntrophic bacterial and methanogenic archaeal communities in paddy soil to soil type and phenological stage of rice growth.
+    \textit{Journal of Cleaner Production}.
     (\Submitted).
 \item
     SY. Xie, CX. Li, J. Li, G. Wang, \Shaoqing, Y. Wang, GW. Yu.
