--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -14,20 +14,40 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
+    XF. Pan, H. Li, LX. Zhao, XR. Yang, JQ. Su, \Shaoqing, J. Ning, CX. Li, GJ. Cai, GF. Zhu. (2020).
+    Response of syntrophic bacterial and methanogenic archaeal communities in paddy soil to soil type and phenological period of rice growth.
+    \textit{Journal of Cleaner Production}. \textit{Accepted}, 123418.
+    \DOI{10.1016/j.jclepro.2020.123418}. [SCI, IF = 7.246]
+\item
+    P. Jia, XX. Cao, HX. Yang, \Shaoqing, P. He, GL. Huang, T. Wu, YG. Wang. (2020).
+    Green space access in the neighbourhood and childhood obesity.
+    \textit{Obesity Reviews}. 1-12.
+    \DOI{10.1111/obr.13100}. [SCI, IF = 7.31]
+\item
+    MY. Luo, HQ. Li, XF. Pan, T. Fei, \Shaoqing, Q. Ge, YX. Zou, H. Vos, JY. Luo, P. Jia. (2020).
+    Neighbourhood speed limit and childhood obesity.
+    \textit{Obesity Reviews}. 1-11.
+    \DOI{10.1111/obr.13052}. [SCI, IF = 7.31]
+\item
+    SY. Xie, GW. Yu, CX. Li, J. Li, G. Wang, \Shaoqing, Y. Wang. (2020).
+    Treatment of high-ash industrial sludge for producing improved char with low heavy metal toxicity.
+    \textit{Journal of Analytical and Applied Pyrolysis}. \textit{150}, 104866.
+    \DOI{10.1016/j.jaap.2020.104866}. [SCI, IF = 3.905]
+\item
     XF. Pan, L. Zhao, JY. Luo, YH. Li, L.Zhang, T. Wu, M. Smith, \Shaoqing, P. Jia. (2020).
     Access to bike lanes and childhood obesity: A systematic review and meta‐analysis.
     \textit{Obesity Reviews}. 1-11.
-    \DOI{10.1111/obr.13042}. [SCI, IF = 8.192]
+    \DOI{10.1111/obr.13042}. [SCI, IF = 7.31]
 \item
     \Shaoqing, SD. Zuo, Y. Ren. (2020).
     A spatial database of CO$_2$ emissions, urban form fragmentation and city-scale effect related impact factors for the low carbon urban system in Jinjiang city, China.
     \textit{Data in Brief}. \textit{29}, 105274.
-    \DOI{10.1016/j.dib.2020.105274}. [CiteScore = 0.93]
+    \DOI{10.1016/j.dib.2020.105274}. [CiteScore = 1.5]
 \item
     SD. Zuo, \Shaoqing, Y. Ren. (2020).
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales.
     \textit{Journal of Cleaner Production}. \textit{244}, 118659.
-    \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF = 6.395]
+    \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF = 7.246]
 \item
     窦攀烽, 左舒翟, 任引, {\heiti{戴劭勍}}, 云国梁. (2019).
     气候和土地利用/覆被变化对宁波地区生态系统产水服务的影响.
@@ -37,22 +57,22 @@
     Q. Yang, TY. Huang, SG. Wang, JS. Li, \Shaoqing, S. Wright, YX. Wang, \& HW. Peng.(2019).
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
     \textit{Applied Energy}. \textit{247}, 254-269.
-    \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF = 8.426]
+    \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF = 8.848]
 \item
     GL. Yun, YR. He, YT. Jiang, PF. Dou, \Shaoqing. (2019).
     PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
     \textit{Atmosphere}. \textit{10}(2), 55.
-    \DOI{10.3390/atmos10020055}. [SCI, IF = 2.046]
+    \DOI{10.3390/atmos10020055}. [SCI, IF = 2.397]
 \item
     SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
     Determining the Mechanisms that Influence the Surface Temperature of Urban Forest Canopies by Combining Remote Sensing Methods, Ground Observations, and Spatial Statistical Models. 
     \textit{Remote Sensing}. \textit{10}(11), 1814.
-    \DOI{10.3390/rs10111814}. [SCI, IF = 4.118]
+    \DOI{10.3390/rs10111814}. [SCI, IF = 4.509]
 \item
     SD. Zuo, \Shaoqing, YY. Li, JF. Tang, Y. Ren. (2018).
 	Analysis of Heavy Metal Sources in the Soil of Riverbanks Across an Urbanization Gradient.
     \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175.
-    \DOI{10.3390/ijerph15102175}. [SCI, IF = 2.468]
+    \DOI{10.3390/ijerph15102175}. [SCI, IF = 2.849]
 \item
     {\heiti{戴劭勍}}, 江辉仙, 李佳佳, 苏娴, 吴娟, 任引. (2018).
 	H市城区步行环境对两抢一盗警情的影响.
@@ -72,7 +92,7 @@
     Q. Ye, \Shaoqing, G. Zeng. (2017).
 	Research on the effects of command-and-control and market-oriented policy tools on China’s energy conservation and emissions reduction innovation.
     \textit{Chinese Journal of Population Resources and Environment}. \textit{16}(1), 1-11.
-    \DOI{10.1080/10042857.2017.1418273}. [ESCI]
+    \DOI{10.1080/10042857.2017.1418273}. [ESCI, CiteScore = 1.9]
 \item
    李苗裔, {\heiti{戴劭勍}}, 王静远, 沈振江. (2016).
 	基于政府大数据的北京城市空间发展模式分析.
@@ -186,16 +206,16 @@
     \Shaoqing, SD. Zuo, CY. Lai, ZW. Yu, JJ. Li, SY. Xie, BC. Chen, Y. Ren.
     A framework for uncertainty propagation in gridded maps of CO$_2$ emissions: a case study of Jinjiang city, China.  
    \textit{Remote Sensing}.
-    (\Review).
+    (\Revision).
 \item
     \Shaoqing\CF, XM. Zheng, L. Gao, CD. Xu, SD. Zuo, Q. Chen, XH. Wei, Y. Ren.
-    Improving maps of forest aboveground biomass: A combined approach using machine learning with a spatial statistical model.
-    \textit{Biogeosciences}. 
-    (\Revision).
+    Improving plot-level model of forest aboveground biomass: A combined approach using machine learning with spatial statistics.
+    \textit{Ecological Modeling}. 
+    (\Review)
 \item
     XM. Zheng, \Shaoqing, Q. Chen, CD. Xu, XH. Wei, MZ. Zhuang, Y. Ren.
     Source Analysis of Uncertainty in Estimates of Forest Above-ground Biomass by Integrating Spatial Statistics, Machine Learning, Forest inventory Data, and Airborne LiDAR Data.
-    \textit{Remote Sensing of Environment}. 
+    \textit{Method in Ecology \& Evolution}. 
     (\Submitted).
 \item
     SJ. Yang, \Shaoqing, YL Huang, P. Jia.
@@ -206,16 +226,6 @@
     PF. Dou, SD.Zuo, Y. Ren, M.J. Rodriguez, \Shaoqing.
     Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
     \textit{Journal of Hydrology}.
-    (\Revision).
-\item
-    XF. Pan, H. Li, LX. Zhao, XR. Yang, JQ. Su, \Shaoqing, CX. Li, GJ. Cai, GF. Zhu.
-    Response of syntrophic bacterial and methanogenic archaeal communities in paddy soil to soil type and phenological stage of rice growth.
-    \textit{Journal of Cleaner Production}.
-    (\Submitted).
-\item
-    SY. Xie, CX. Li, J. Li, G. Wang, \Shaoqing, Y. Wang, GW. Yu.
-    Treatment of industrial sludge via co-pyrolysis with rice straw for biochar improvement and heavy metals immobilization.
-    \textit{Journal of Analytical and Applied Pyrolysis}. 
     (\Revision).
 %\end{etaremune}
 \end{enumerate}
