--- a/cnlatex/presentation.tex
+++ b/cnlatex/presentation.tex
@@ -1,4 +1,5 @@
 \section{\texorpdfstring{\faCommentsO\ 汇报}{汇报}}
+\mycvitemXP{2020.08.07}{\songti{什么是地理学——从新冠疫情到北斗卫星}}{\songtix{同安第一中学地理组}}{中国,福建省同安第一中学}
 \mycvitemXP{2018.05.27}{\songti{地理要素的尺度,分区效应,可变面积单元问题与空间统计的挑战}}{\songtix{第十一届中国R语言会议}}{中国,北京人民大学}
 \mycvitemXP{2018.05.22}{High-Resolution Mapping of Direct CO$_2$ Emissions and Uncertainties at the Urban Scale}{13th International Symposium on Spatial Accuracy Assessment in Natural Resources and Environmental Sciences(Spatial Accuracy 2018)}{中国,北京国家会议中心}
 \mycvitemXP{2017.11.11}{\songti{城市形态的PM2.5环境效应——以京津冀城市群为例}}{\songtix{第九届中国景观生态学学术研讨会}}{中国,广州三寓宾馆}
