--- a/presentation.tex
+++ b/presentation.tex
@@ -1,4 +1,5 @@
 \section{\texorpdfstring{\faCommentsO\ Presentations}{Presentations}}
+\mycvitemXP{2020.08.07}{What is geography? From coronavirus disease 2019 to Bei Dou Systems}{Geography lecture group,Tong An No.1 High School of Fujian}{Tong An No.1 High School of Fujian, Xiamen, China}
 \mycvitemXP{2018.05.27}{The Scale Effect, Zoning Effect of Geographical Features, the Modified Areal Unit Problem and the Chanlleges of Spatial Stastistics}{11th Chinese R Language Conference}{Renmin University of China, Beijing, China}
 \mycvitemXP{2018.05.22}{High-Resolution Mapping of Direct CO$_2$ Emissions and Uncertainties at the Urban Scale}{13th International Symposium on Spatial Accuracy Assessment in Natural Resources and Environmental Sciences(Spatial Accuracy 2018)}{China National Convention Center, Beijing, China}
 \mycvitemXP{2017.11.11}{The Environmental Effect of Urban Form on PM2.5: A Case Study of Beijing-Tianjin-Hebei Urban Agglomeration}{9th Chinese Landscape Eoclogy workshop}{Sanyu Houtel, Guangzhou, China}
